[package]
name = "rust-todo"
version = "0.1.0"
authors = ["taikou-kobayashi-mg <taiko.kobayashi@m-gild.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.3.2"
thiserror = "1.0.23"
